# classifier-cpp

./: README.md
classifier-cpp/: CMakeLists.txt  Infer_OpenCV_multithreading  Infer_OpenCV_multithreading_multiple_cameras  infer_opencv.cpp  infer_opencv_multithreading.cpp  infer_opencv_multithreading_multiple_cameras.cpp  infer_openvino.cpp  infer_ort.cpp  train.py
classifier-cpp/models/: onnx2openvino.py  onnx2trt.py  onnx2trt_2.py
classifier-cpp/models/openvino/: vgg.mapping  vgg.xml
deploy-classifier-cpp/: Dockerfile  app.py
deploy-classifier-cpp/deploy-docker-compose/: docker-compose.yml
deploy-classifier-cpp/deploy-docker-swarm/: deploy-docker-swarm.md
deploy-classifier-cpp/deploy-kubernetes/: deploy-kubernetes.md  deployment.yml  service.yml
deploy-classifier-cpp/lib/: libopenvino.so.2440  libopenvino_c.so.2024.4.0  libopenvino_c.so.2440  libopenvino_ir_frontend.so.2024.4.0  libopenvino_ir_frontend.so.2440  libopenvino_onnx_frontend.so.2440  libopenvino_paddle_frontend.so.2024.4.0  libopenvino_paddle_frontend.so.2440  libopenvino_pytorch_frontend.so.2024.4.0  libopenvino_pytorch_frontend.so.2440  libopenvino_tensorflow_frontend.so.2440  libopenvino_tensorflow_lite_frontend.so.2024.4.0  libopenvino_tensorflow_lite_frontend.so.2440
deploy-classifier-cpp/templates/: index.html
